# lockandkey

./: .envrc  .gitignore  LICENSE  LockAndKey.spec  README.md  README.ru.md  TODO.md  build.py  entrypoint.py  pyproject.toml  requirements.txt
data/migration/: 0_initial_schema.sql  initial_schema.sql
scripts/: dev.sh
src/: __init__.py  errors.py  main.py
src/models/: cryptid.py  customs.py  db.py  migrant.py
src/resources/: __init__.py
src/resources/translations/: ru.qm
src/resources/views/: about.ui  create.ui  entry.ui  generate.ui  greeting.ui  greeting_future.ui  group.ui  main.ui  qr.ui  secrets.ui  settings.ui  unlock.ui
src/ui/: __init__.py  about.py  creation.py  entry.py  generation.py  greetings.py  group.py  icons.py  main.py  qr.py  settings.py  table.py  unlocking.py
src/utils/: __init__.py  characters.py  config.py  logger.py  logging.py  passwords.py
tests/: test_passwords.py
