[project]
name = "lockandkey"
version = "0.0.1"
description = "A simple-as-hell password manager for all your minimalist needs."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "pyqt6>=6.10.0",
]
authors = [
    {name = "V. Zhdanov", email = "vlad@videvsys.ru"}
]
maintainers = [
    {name = "V. Zhdanov", email = "vlad@videvsys.ru"}
]
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["tests", "scripts"]

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins: Avoid shadowing Python builtins
    "B",    # flake8-bugbear: Catch common bugs (e.g., mutable default arguments)
    "C4",   # flake8-comprehensions: Improve comprehension and generator usage
    "D",    # pydocstyle: Enforce docstring conventions (configured below to avoid conflicts)
    "E",    # pycodestyle errors: Syntax and basic style errors
    "F",    # pyflakes: Logical errors (e.g., unused imports, undefined variables)
    "I",    # isort: Enforce import sorting
    "N",    # pep8-naming: Enforce naming conventions
    "PL",   # pylint: Additional static analysis (e.g., too-many-branches)
    "PT",   # flake8-pytest-style: Enforce pytest best practices
    "RET",  # flake8-return: Improve return statement consistency
    "RUF",  # Ruff-specific rules: Additional optimizations and best practices
    "S",    # flake8-bandit: Basic security checks
    "SIM",  # flake8-simplify: Simplify code patterns
    "T20",  # flake8-print: Avoid print statements (unless debugging)
    "UP",   # pyupgrade: Enforce modern Python syntax
]
ignore = [
    "D203",  # Conflicts with D211 (class docstring placement)
    "D212",  # Conflicts with D213 (multi-line docstring summary)
    "PYI019" # PyQt6 .ui-defined widgets are invisible to pyright and ruff
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "qrcode>=8.2",
    "ruff>=0.14.3",
]

[project.scripts]
dev = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "**.pyc",
    "tests/",
    ".gitignore",
]

[tool.hatch.build.targets.wheel.force-include]
"src/resources" = "resources"

[tool.pyright]
"reportAttributeAccessIssue" = "none"
